--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,25 +5,19 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Muskan-Collection-Inventory"
-    />
+    <meta name="description" content="Muskan-Collection-Inventory" />
     <title>Muskan-Collection-Inventory</title>
-    <meta name="google-site-verification" content="6dg-4WU8ATidjrX5by_EjfoNsB3SqvXHRy-383R65sQ" />
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta
+      name="google-site-verification"
+      content="6dg-4WU8ATidjrX5by_EjfoNsB3SqvXHRy-383R65sQ"
+    />
+    <meta
+      name="google-signin-client_id"
+      content="476744611799-84mq6mt587ilbdgiv0p5psmd3hl25sqb.apps.googleusercontent.com"
+    />
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
